assets/styles/main.scss
@use 'theme';
@use 'primevue/resources/primevue.min.css';
@use 'primeicons/primeicons.css';
@use 'primeflex/primeflex.css';

@use 'typography';
@use 'forms';
@use 'buttons';
@use 'cards';
@use 'transitions';

$medium: 768px;

html,
body {
  font-weight: 300;
  margin: 0;
  overflow-x: hidden;
  scroll-behavior: smooth;
}

img {
  max-width: 100%;
  height: auto;
}

a,
a:visited,
a:active {
  text-decoration: none;
  color: var(--link-color);
  border-bottom: none;
  border-bottom: solid 1px transparent;
  transition: var(--transition);

  &:hover {
    border-bottom: solid 1px var(--link-color);
  }

  &.plain {
    border-bottom: none;
    text-decoration: none;
    &:hover {
      text-decoration: none;
      border-bottom: none;
    }
  }

  &.gray {
    color: var(--gray);
  }
}

hr {
  border: none;
  border-top: solid 1px var(--light-gray);
}

table {
  border-collapse: collapse;
  text-align: left;

  th,
  td {
    padding: 0.75rem;
  }

  tr {
    vertical-align: middle;
    &.top {
      vertical-align: top;
    }
    border-bottom: solid 1px var(--gray-200);
  }
}

.container {
  max-width: 1460px;
  margin: auto;
}

.width200 {
  width: 200px;
}

.width400 {
  width: 100%;
  max-width: 400px;
}

.changes-saved-toast {
  position: fixed;
  bottom: 0;
  right: 25px;
  width: 350px;
  z-index: 1000;
}

.black {
  color: var(--black);
}

.white {
  color: var(--white);
}

.green {
  color: var(--dark-green);
}

.yellow {
  color: var(--yellow);
}

.orange {
  color: var(--orange);
}

.red {
  color: var(--red) !important;
}

.tag {
  width: fit-content;
  height: 28px;
  line-height: 28px;
  text-align: center;
  background: var(--light-green);
  border-radius: 20px;
  padding: 0 0.75rem;
  font-size: var(--font-size-3);
  font-family: var(--font-family);
  font-weight: 500;
  text-transform: uppercase;
  &.active {
    background: var(--yellow);
  }
  &.large {
    min-width: 50px;
    height: 32px;
    line-height: 32px;
    padding: 0 1rem;
    font-size: var(--font-size-3);
    @media all and (min-width: $medium) {
      font-size: var(--font-size-4);
    }
  }
  &.round {
    border-radius: 50%;
    padding: 0;
    min-width: 32px;
    height: 32px;
    display: flex;
    align-items: center;
    justify-content: center;
  }
}

// prime vue overrides

.cursor-pointer,
.clickable {
  cursor: pointer;
  opacity: 1;
  transition: var(--transition);
  &:hover {
    opacity: var(--opacity-on-hover);
  }
}

.p-progress-spinner-circle {
  stroke: var(--green) !important;
}

.p-message {
  border-radius: 10px;
}

.p-avatar img {
  object-fit: cover;
}

.grid {
  margin: 0 -15px;
}
.grid > [class*='col'] {
  padding: 0 15px;
}

.divider,
.p-divider.p-divider-horizontal:before {
  border-top: solid 1px var(--light-green);
}

.divider-bottom {
  border-bottom: solid 1px var(--light-green);
}

.p-dialog .p-dialog-header {
  padding-bottom: 0;
}

.p-accordion-header-text {
  font-weight: bold;
}
.p-accordion-header-link {
  transition: var(--transition) !important;
  &:hover {
    background: var(--light-gray) !important;
  }
}

.rounded {
  border-radius: 20px;
}

